css/style.css
/* TODO: IMPORT FONT */

:root {
	--primary-color: hsl(210, 29%, 22%);
	--secondary-color: rgb(226, 191, 31);
	--white: #f2f2f2;
}

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 62.5%;
}

body {
	font-family: 'Roboto', sans-serif;
}

.line-1, .line-2, .line-3 {
	width: 35px;
	height: 5px;
	background-color: var(--white);
	margin: 3px 0;
	transition: 0.4s;
 }
 
/* Toggle class to  change the state of hambuger icon cross*/
 .toggle .line-1 {
	transform: translateY(12px) rotate(135deg);
 }
 
 .toggle .line-2 {opacity: 0;}
 
 .toggle .line-3 {

	transform: translateY(-10px) rotate(-135deg);
 }

.hamburger {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-end;
	padding-right: 40px;
	cursor: pointer;
}



.name {
	font-size: 2.2rem;
}

ul {
	list-style: none;
}

ul li {
	padding: 1rem 0;
}
ul li a {
	text-decoration: none;
	color: var(--white);
	font-size: 2rem;
}
.social-icon ul {
	display: flex;
	justify-content: center;
}
.social-icon ul svg {
	display: flex;
	justify-content: center;
	width: 1.7rem;
	fill: var(--primary-color);
}

.social-icon li {
	border-radius: 50%;
	background-color: var(--white);
	color: var(--primary-color);
	width: 3rem;
	margin: 5rem 1rem;
	height: 3rem;
	font-size: 1.8rem;
	display: flex;
	justify-content: center;
	align-items: center;
}

.social-icon a {
	text-decoration: none;
}

.header {
	background-color: var(--primary-color);
	width: 100%;
	height: 8vh;
}

.header .hamburger{
	height: 8vh;
}

.big-nav {
	text-align: center;
	color: var(--white);
}

.toggle{
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	background-color: hsla(210, 29%, 22%, 0.8);
} 


header .img-container {
	display: flex;
	justify-content: center;
}

header .img-container > img {
	margin-top: 5rem;
	margin-bottom: 2rem;
	border-radius: 50%;
	width: 17rem;
	height: 15.6rem;
	border: 3px solid var(--white);
}

.big-nav > h1 {
	margin-bottom: 5rem;
}

.social-icon {
	opacity: 0.6;
}


/*Utility classes*/

.center {
	text-align: center;
}

.right {
	text-align: right;
}

.left {
	text-align: left;
}

/* Main section starts from here */

main {
	font-size: 2rem;
}

.about-picture {
	display: none;
}

.first-part{
	padding: 1rem;
}


#about .first-part > .text {
	flex: 2;
	line-height: 1.6;
	font-size: 1.2rem;
	word-spacing: 0.3rem;
	letter-spacing: 0.3rem;
}

#about .line {
	width: 100%;
	height: 0.2rem;
	background-color: rgba(0, 0, 0, 0.3);
	box-shadow: 0.1rem 0.2rem 0.6rem black;
}

#about .second-part {
	display: flex;
	padding-right: 4rem;
}

.second-part > p {
	flex: 1;
	font-size: 15rem;
}

.second-part > p > span {
	color: var(--secondary-color);
}

.second-part > div {
	flex: 3;
	align-self: center;
}




@media only screen and (min-width: 768px) {
	.container .header {
		width: 300px;
		height: 100%;
		position: fixed;
		overflow: auto;
		padding: 20px;
	}

	.container .header .hamburger {
		display: none;
	}

	.big-nav {
		display: block !important;
	}

	ul li a:hover {
		color: var(--secondary-color);
		font-weight: 700;
	}

	main {
		margin-left: 300px;
	}

	.about-picture{
		display: block;
	}

	/*About section*/

#about .first-part {
	display: flex;
	align-items: center;
	padding-right: 9px;
}

#about .first-part > .img-container {
	flex: 1;
}

.about-picture {
	display: block;
	max-width: 100%;
	height: auto;
}

	#about .first-part > .text {
		flex: 2;
		line-height: 1.7;
		font-size: 1.5rem;
		word-spacing: 0.6rem;
		letter-spacing: 0.5rem;
	}

}

